# qtree

./: .readthedocs.yaml  CITATION.bib  CITATION.cff  LICENSE  README.rst  pytest.ini  setup.cfg
.github/workflows/: tests.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  qtree.rst
examples/: demo-simple.ipynb
examples/data/tictactoe/: info.txt  tic-tac-toe.npz
src/qtree/: __init__.py  ctree.py  data.py  qtree.py  quant.py
tests/: __init__.py  test_circ.py  test_qtree.py  test_quant.py
