##########################
# Setup.py Configuration #
##########################

[metadata]
name = qtree
version = 1.0
description = Quantum decision trees with binary features and binary classes
long_description = file: README.rst
long_description_content_type = text/x-rst

# URLs associated with the project
url = https://github.com/RaoulHeese/qtree
download_url = https://github.com/RaoulHeese/qtree/releases
project_urls =
    Bug Tracker = https://github.com/RaoulHeese/qtree/issues
    Source Code = https://github.com/RaoulHeese/qtree
	
# Author information
author = Raoul Heese
author_email = raoul.heese@gmail.com
maintainer = Raoul Heese
maintainer_email = raoul.heese@gmail.com

# License information
license = MIT
license_files = LICENSE

classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Programming Language :: Python
	Topic :: Scientific/Engineering :: Artificial Intelligence
	Topic :: Scientific/Engineering :: Physics

[options]
install_requires =
	numpy
	deap
	scikit-learn

packages = find:
package_dir =
    = src

[options.packages.find]
where = src